Origin: runnables rework, removing concurrency